feat: add typography-classes and color-vars files with styles

--- a/coffe-house/src/index.html
+++ b/coffe-house/src/index.html
@@ -7,7 +7,7 @@
     <title>Coffe House</title>
   </head>
   <body>
-    <h1>Working</h1>
+    <h1 class="heading-1 accent">Working</h1>
     <img src="./assets/images/about/about-1.jpg" alt="about-1.jpg">
     <img src="./assets/images/about/about-2.jpg" alt="about-2.jpg">
   </body>
