--- a/coffe-house/src/index.html
+++ b/coffe-house/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1 class="heading-1 accent">Working</h1>
-    <img src="./assets/images/about/about-1.jpg" alt="about-1.jpg">
+    <img src="./assets/icons/coffee-cup.svg" alt="about-1.jpg">
     <img src="./assets/images/about/about-2.jpg" alt="about-2.jpg">
   </body>
 </html>
