feat: add header component

--- a/coffe-house/src/index.html
+++ b/coffe-house/src/index.html
@@ -6,9 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffe House</title>
   </head>
-  <body>
-    <h1 class="heading-1 accent">Working</h1>
-    <img src="./assets/icons/coffee-cup.svg" alt="about-1.jpg">
-    <img src="./assets/images/about/about-2.jpg" alt="about-2.jpg">
+  <body class="container">
+    <header class="header">
+      <div class="header__logo">
+        <img src="./assets/images/logo.png" alt="logo">
+      </div>
+      <nav class="header__nav header__nav--page">
+        <ul>
+          <li><a class="link-font nav-link" href="#favorite-coffe">Favorite coffee</a></li>
+          <li><a class="link-font nav-link" href="#about">About</a></li>
+          <li><a class="link-font nav-link" href="#mobile-app">Mobile app</a></li>
+          <li><a class="link-font nav-link" href="#contact-us">Contact us</a></li>
+        </ul>
+      </nav>
+      <nav class="header__nav header__nav--menu">
+        <ul>
+          <li class="nav-link">
+            <div>
+              <a class="link-font" href="#">Menu</a>
+              <img src="./assets/icons/coffee-cup.svg" alt="coffee">
+            </div>
+          </li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
