feat: add hero section

--- a/coffe-house/src/index.html
+++ b/coffe-house/src/index.html
@@ -9,7 +9,9 @@
   <body class="container">
     <header class="header">
       <div class="header__logo">
-        <img src="./assets/images/logo.png" alt="logo">
+        <a href="/">
+          <img src="./assets/images/logo.png" alt="logo">
+        </a>
       </div>
       <nav class="header__nav header__nav--page">
         <ul>
@@ -30,5 +32,14 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="hero">
+        <div class="hero__content">
+          <h1 class="hero__heading heading-1"><span class="heading-1 accent">Enjoy</span> premium coffee at our charming cafe</h1>
+          <p class="hero__text medium">With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite beverage.</p>
+          <a class="hero__menu-link link-font" href="/menu">Menu <img src="./assets/icons/coffee-cup.svg" alt="coffee-icon"></a>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
