feat: add favourite coffee section

--- a/coffe-house/src/index.html
+++ b/coffe-house/src/index.html
@@ -15,7 +15,7 @@
       </div>
       <nav class="header__nav header__nav--page">
         <ul>
-          <li><a class="link-font nav-link" href="#favorite-coffe">Favorite coffee</a></li>
+          <li><a class="link-font nav-link" href="#favorite-coffee">Favorite coffee</a></li>
           <li><a class="link-font nav-link" href="#about">About</a></li>
           <li><a class="link-font nav-link" href="#mobile-app">Mobile app</a></li>
           <li><a class="link-font nav-link" href="#contact-us">Contact us</a></li>
@@ -35,9 +35,29 @@
     <main>
       <section class="hero">
         <div class="hero__content">
-          <h1 class="hero__heading heading-1"><span class="heading-1 accent">Enjoy</span> premium coffee at our charming cafe</h1>
+          <h1 class="hero__heading heading-1"><em class="heading-1 accent">Enjoy</em> premium coffee at our charming cafe</h1>
           <p class="hero__text medium">With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite beverage.</p>
           <a class="hero__menu-link link-font" href="/menu">Menu <img src="./assets/icons/coffee-cup.svg" alt="coffee-icon"></a>
+        </div>
+      </section>
+      <section class="favorite-coffee" id="favorite-coffee">
+        <h2 class="favorite-coffee__heading heading-2">Choose your <em class="heading-2 accent">favorite</em> coffee</h2>
+        <div class="slider">
+          <div class="slider__back"><img src="./assets/icons/arrow-right.svg" alt="arrow-back"></div>
+          <div class="slider__item">
+            <img src="./assets/images/coffee-slider/coffee-slider-1.png" alt="coffe-1">
+            <div class="slider__desc">
+              <h3 class="heading-3">S’mores Frappuccino</h3>
+              <p class="medium">This new drink takes an espresso and mixes it with brown sugar and cinnamon before being topped with oat milk.</p>
+              <h4 class="heading-3">$5.50</h4>
+            </div>
+            <div class="slider__pagination">
+              <span class="active"></span>
+              <span></span>
+              <span></span>
+            </div>
+          </div>
+          <div class="slider__next"><img src="./assets/icons/arrow-right.svg" alt="arrow-next"></div>
         </div>
       </section>
     </main>
