feat: add about section

--- a/coffe-house/src/index.html
+++ b/coffe-house/src/index.html
@@ -60,6 +60,19 @@
           <div class="slider__next"><img src="./assets/icons/arrow-right.svg" alt="arrow-next"></div>
         </div>
       </section>
+      <section class="about" id="about">
+        <h2 class="about__heading heading-2">Resource is <em class="heading-2 accent">the perfect and cozy place</em> where you can enjoy a variety of hot beverages, relax, catch up with friends, or get some work done.</h2>
+        <div class="about__gallery">
+          <div class="col-1">
+            <div class="image image-1 img-big"></div>
+            <div class="image image-2 img-small"></div>
+          </div>
+          <div class="col-2">
+            <div class="image image-3 img-small"></div>
+            <div class="image image-4 img-big"></div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
