--- a/coffe-house/src/index.html
+++ b/coffe-house/src/index.html
@@ -73,6 +73,7 @@
           </div>
         </div>
       </section>
+      <section class="mobile-app" id="mobile-app"></section>
     </main>
   </body>
 </html>
