feat: add mobile app section

--- a/coffe-house/src/index.html
+++ b/coffe-house/src/index.html
@@ -73,7 +73,32 @@
           </div>
         </div>
       </section>
-      <section class="mobile-app" id="mobile-app"></section>
+      <section class="mobile-app" id="mobile-app">
+        <div class="mobile-app__content">
+          <h2 class="mobile-app__heading heading-2"><em class="heading-2 accent">Download</em> our apps to start ordering</h2>
+          <p class="medium">Download the Resource app today and experience the comfort of ordering your favorite coffee from wherever you are</p>
+          <div class="mobile-app__stores">
+            <button type="button" class="mobile-app__store">
+              <img src="./assets/icons/apple-icon.svg" alt="apple-icon">
+              <span class="store-text">
+                <span class="store-label caption">Available on the</span>
+                <span class="store-name button-font">App Store</span>
+              </span>
+            </button>
+            <button type="button" class="mobile-app__store">
+              <img src="./assets/icons/google-play-icon.svg" alt="google-play-icon">
+              <span class="store-text">
+                <span class="store-label caption">Available on</span>
+                <span class="store-name button-font">Google Play</span>
+              </span>
+            </button>
+          </div>
+        </div>
+        <div class="mobile-app__image">
+          <img src="./assets/images/mobile-screens.png" alt="phones">
+        </div>
+      </section>
     </main>
+    <footer></footer>
   </body>
 </html>
