feat: add footer

--- a/coffe-house/src/index.html
+++ b/coffe-house/src/index.html
@@ -18,7 +18,7 @@
           <li><a class="link-font nav-link" href="#favorite-coffee">Favorite coffee</a></li>
           <li><a class="link-font nav-link" href="#about">About</a></li>
           <li><a class="link-font nav-link" href="#mobile-app">Mobile app</a></li>
-          <li><a class="link-font nav-link" href="#contact-us">Contact us</a></li>
+          <li><a class="link-font nav-link" href="#contacts">Contact us</a></li>
         </ul>
       </nav>
       <nav class="header__nav header__nav--menu">
@@ -99,6 +99,31 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="footer" id="contacts">
+      <div class="footer__left">
+        <h2 class="footer__heading heading-2">
+          Sip, Savor, Smile. <em class="heading-2 accent">It’s coffee time!</em>
+        </h2>
+        <nav class="footer__social">
+          <ul>
+            <li><a href="https://twitter.com/" target="_blank"><img src="./assets/icons/twitter.svg" alt="twitter"></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank"><img src="./assets/icons/instagram.svg" alt="instagram"></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank"><img src="./assets/icons/facebook.svg" alt="facebook"></a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="footer__right">
+        <h3 class="heading-3">Contact us</h3>
+        <div class="footer__contacts">
+          <nav>
+            <ul>
+              <li class="nav-link nav-link__footer"><a href="#contacts"><img src="./assets/icons/pin-alt.svg" alt="geo">8558 Green Rd., LA</a></li>
+              <li class="nav-link nav-link__footer"><a href="tel:+16035550123"><img src="./assets/icons/phone.svg" alt="tel">+1&nbsp;(603)&nbsp;555&#8209;0123</a></li>
+              <li class="nav-link nav-link__footer"><a href="#contacts"><img src="./assets/icons/clock.svg" alt="clock">Mon-Sat: 9:00 AM – 23:00 PM</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
