--- a/coffe-house/src/index.html
+++ b/coffe-house/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/icons/coffee-cup.svg" type="image/svg">
     <title>Coffe House</title>
   </head>
   <body class="container">
@@ -25,7 +26,7 @@
         <ul>
           <li class="nav-link">
             <div>
-              <a class="link-font" href="#">Menu</a>
+              <a class="link-font" href="/menu">Menu</a>
               <img src="./assets/icons/coffee-cup.svg" alt="coffee">
             </div>
           </li>
@@ -117,7 +118,7 @@
         <div class="footer__contacts">
           <nav>
             <ul>
-              <li class="nav-link nav-link__footer"><a href="#contacts"><img src="./assets/icons/pin-alt.svg" alt="geo">8558 Green Rd., LA</a></li>
+              <li class="nav-link nav-link__footer"><a href="https://www.google.com/maps/search/8558+Green+Rd.,+LA/@30.8296073,-96.6917553,6z/data=!3m1!4b1?entry=ttu" target="_blank"><img src="./assets/icons/pin-alt.svg" alt="geo">8558 Green Rd., LA</a></li>
               <li class="nav-link nav-link__footer"><a href="tel:+16035550123"><img src="./assets/icons/phone.svg" alt="tel">+1&nbsp;(603)&nbsp;555&#8209;0123</a></li>
               <li class="nav-link nav-link__footer"><a href="#contacts"><img src="./assets/icons/clock.svg" alt="clock">Mon-Sat: 9:00 AM – 23:00 PM</a></li>
             </ul>
