--- a/coffe-house/src/index.html
+++ b/coffe-house/src/index.html
@@ -26,7 +26,7 @@
         <ul>
           <li class="nav-link">
             <div>
-              <a class="link-font" href="/menu">Menu</a>
+              <a class="link-font" href="/menu.html">Menu</a>
               <img src="./assets/icons/coffee-cup.svg" alt="coffee">
             </div>
           </li>
@@ -38,7 +38,7 @@
         <div class="hero__content">
           <h1 class="hero__heading heading-1"><em class="heading-1 accent">Enjoy</em> premium coffee at our charming cafe</h1>
           <p class="hero__text medium">With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite beverage.</p>
-          <a class="hero__menu-link link-font" href="/menu">Menu <img src="./assets/icons/coffee-cup.svg" alt="coffee-icon"></a>
+          <a class="hero__menu-link link-font" href="/menu.html">Menu <img src="./assets/icons/coffee-cup.svg" alt="coffee-icon"></a>
         </div>
       </section>
       <section class="favorite-coffee" id="favorite-coffee">
