feat: add heading to menu page

--- a/coffe-house/src/menu.html
+++ b/coffe-house/src/menu.html
@@ -33,6 +33,11 @@
       </ul>
     </nav>
   </header>
+  <main>
+    <section class="menu">
+      <h1 class="menu__heading heading-2">Behind each of our cups hides an <em class="heading-2 accent">amazing surprise</em></h1>
+    </section>
+  </main>
   <footer class="footer" id="contacts">
     <div class="footer__left">
       <h2 class="footer__heading heading-2">
