feat: add menu options tabs

--- a/coffe-house/src/menu.html
+++ b/coffe-house/src/menu.html
@@ -36,6 +36,11 @@
   <main>
     <section class="menu">
       <h1 class="menu__heading heading-2">Behind each of our cups hides an <em class="heading-2 accent">amazing surprise</em></h1>
+      <ul class="menu__options">
+        <li class="menu__option active link-font"><span><img src="./assets/images/tab-items/coffee.png" alt="coffee"></span>Coffee</li>
+        <li class="menu__option link-font"><span><img src="./assets/images/tab-items/tea.png" alt="tea"></span>Tea</li>
+        <li class="menu__option link-font"><span><img src="./assets/images/tab-items/desert.png" alt="desert"></span>Dessert</li>
+      </ul>
     </section>
   </main>
   <footer class="footer" id="contacts">
