feat: add menu item cards and other additional styles

--- a/coffe-house/src/menu.html
+++ b/coffe-house/src/menu.html
@@ -24,7 +24,7 @@
     </nav>
     <nav class="header__nav header__nav--menu">
       <ul>
-        <li class="nav-link">
+        <li class="nav-link active">
           <div>
             <a class="link-font" href="/menu.html">Menu</a>
             <img src="./assets/icons/coffee-cup.svg" alt="coffee">
@@ -41,9 +41,75 @@
         <li class="menu__option link-font"><span><img src="./assets/images/tab-items/tea.png" alt="tea"></span>Tea</li>
         <li class="menu__option link-font"><span><img src="./assets/images/tab-items/desert.png" alt="desert"></span>Dessert</li>
       </ul>
+      <ul class="menu__items">
+        <li class="menu__item">
+          <div class="menu__item-photo coffee-1"></div>
+          <div class="menu__item-description">
+            <h4 class="heading-3">Irish coffee</h4>
+            <p class="medium">Fragrant black coffee with Jameson Irish whiskey and whipped milk</p>
+            <h5 class="heading-3">$7.00</h5>
+          </div>
+        </li>
+        <li class="menu__item">
+          <div class="menu__item-photo coffee-2"></div>
+          <div class="menu__item-description">
+            <h4 class="heading-3">Kahlua coffee</h4>
+            <p class="medium">Classic coffee with milk and Kahlua liqueur under a cap of frothed milk</p>
+            <h5 class="heading-3">$7.00</h5>
+          </div>
+        </li>
+        <li class="menu__item">
+          <div class="menu__item-photo coffee-3"></div>
+          <div class="menu__item-description">
+            <h4 class="heading-3">Honey raf</h4>
+            <p class="medium">Espresso with frothed milk, cream and aromatic honey</p>
+            <h5 class="heading-3">$5.50</h5>
+          </div>
+        </li>
+        <li class="menu__item">
+          <div class="menu__item-photo coffee-4"></div>
+          <div class="menu__item-description">
+            <h4 class="heading-3">Ice cappuccino</h4>
+            <p class="medium">Cappuccino with soft thick foam in summer version with ice</p>
+            <h5 class="heading-3">$5.00</h5>
+          </div>
+        </li>
+        <li class="menu__item">
+          <div class="menu__item-photo coffee-5"></div>
+          <div class="menu__item-description">
+            <h4 class="heading-3">Espresso</h4>
+            <p class="medium">Classic black coffee</p>
+            <h5 class="heading-3">$4.50</h5>
+          </div>
+        </li>
+        <li class="menu__item">
+          <div class="menu__item-photo coffee-6"></div>
+          <div class="menu__item-description">
+            <h4 class="heading-3">Latte</h4>
+            <p class="medium">Espresso coffee with the addition of steamed milk and dense milk foam</p>
+            <h5 class="heading-3">$5.50</h5>
+          </div>
+        </li>
+        <li class="menu__item">
+          <div class="menu__item-photo coffee-7"></div>
+          <div class="menu__item-description">
+            <h4 class="heading-3">Latte macchiato</h4>
+            <p class="medium">Espresso with frothed milk and chocolate</p>
+            <h5 class="heading-3">$5.50</h5>
+          </div>
+        </li>
+        <li class="menu__item">
+          <div class="menu__item-photo coffee-8"></div>
+          <div class="menu__item-description">
+            <h4 class="heading-3">Coffee with cognac</h4>
+            <p class="medium">Fragrant black coffee with cognac and whipped cream</p>
+            <h5 class="heading-3">$6.50</h5>
+          </div>
+        </li>
+      </ul>
     </section>
   </main>
-  <footer class="footer" id="contacts">
+  <footer class="footer footer--menu" id="contacts">
     <div class="footer__left">
       <h2 class="footer__heading heading-2">
         Sip, Savor, Smile. <em class="heading-2 accent">It’s coffee time!</em>
