fix: animations on menu items

--- a/coffe-house/src/menu.html
+++ b/coffe-house/src/menu.html
@@ -43,7 +43,9 @@
       </ul>
       <ul class="menu__items">
         <li class="menu__item">
-          <div class="menu__item-photo coffee-1"></div>
+          <div class="menu__item-photo">
+            <img src="./assets/images/menu/coffee-1.jpg" alt="coffee-1" >
+          </div>
           <div class="menu__item-description">
             <h4 class="heading-3">Irish coffee</h4>
             <p class="medium">Fragrant black coffee with Jameson Irish whiskey and whipped milk</p>
@@ -51,7 +53,7 @@
           </div>
         </li>
         <li class="menu__item">
-          <div class="menu__item-photo coffee-2"></div>
+          <div class="menu__item-photo coffee-2"><img src="./assets/images/menu/coffee-2.jpg" alt="coffee-2" ></div>
           <div class="menu__item-description">
             <h4 class="heading-3">Kahlua coffee</h4>
             <p class="medium">Classic coffee with milk and Kahlua liqueur under a cap of frothed milk</p>
@@ -59,7 +61,7 @@
           </div>
         </li>
         <li class="menu__item">
-          <div class="menu__item-photo coffee-3"></div>
+          <div class="menu__item-photo coffee-3"><img src="./assets/images/menu/coffee-3.jpg" alt="coffee-3" ></div>
           <div class="menu__item-description">
             <h4 class="heading-3">Honey raf</h4>
             <p class="medium">Espresso with frothed milk, cream and aromatic honey</p>
@@ -67,7 +69,7 @@
           </div>
         </li>
         <li class="menu__item">
-          <div class="menu__item-photo coffee-4"></div>
+          <div class="menu__item-photo coffee-4"><img src="./assets/images/menu/coffee-4.jpg" alt="coffee-5" ></div>
           <div class="menu__item-description">
             <h4 class="heading-3">Ice cappuccino</h4>
             <p class="medium">Cappuccino with soft thick foam in summer version with ice</p>
@@ -75,7 +77,7 @@
           </div>
         </li>
         <li class="menu__item">
-          <div class="menu__item-photo coffee-5"></div>
+          <div class="menu__item-photo coffee-5"><img src="./assets/images/menu/coffee-5.jpg" alt="coffee-5" ></div>
           <div class="menu__item-description">
             <h4 class="heading-3">Espresso</h4>
             <p class="medium">Classic black coffee</p>
@@ -83,7 +85,7 @@
           </div>
         </li>
         <li class="menu__item">
-          <div class="menu__item-photo coffee-6"></div>
+          <div class="menu__item-photo coffee-6"><img src="./assets/images/menu/coffee-6.jpg" alt="coffee-6" ></div>
           <div class="menu__item-description">
             <h4 class="heading-3">Latte</h4>
             <p class="medium">Espresso coffee with the addition of steamed milk and dense milk foam</p>
@@ -91,7 +93,7 @@
           </div>
         </li>
         <li class="menu__item">
-          <div class="menu__item-photo coffee-7"></div>
+          <div class="menu__item-photo coffee-7"><img src="./assets/images/menu/coffee-7.jpg" alt="coffee-7" ></div>
           <div class="menu__item-description">
             <h4 class="heading-3">Latte macchiato</h4>
             <p class="medium">Espresso with frothed milk and chocolate</p>
@@ -99,7 +101,7 @@
           </div>
         </li>
         <li class="menu__item">
-          <div class="menu__item-photo coffee-8"></div>
+          <div class="menu__item-photo coffee-8"><img src="./assets/images/menu/coffee-8.jpg" alt="coffee-8" ></div>
           <div class="menu__item-description">
             <h4 class="heading-3">Coffee with cognac</h4>
             <p class="medium">Fragrant black coffee with cognac and whipped cream</p>
