fix: animations on about images

--- a/coffe-house/src/index.html
+++ b/coffe-house/src/index.html
@@ -65,12 +65,12 @@
         <h2 class="about__heading heading-2">Resource is <em class="heading-2 accent">the perfect and cozy place</em> where you can enjoy a variety of hot beverages, relax, catch up with friends, or get some work done.</h2>
         <div class="about__gallery">
           <div class="col-1">
-            <div class="image image-1 img-big"></div>
-            <div class="image image-2 img-small"></div>
+            <div class="image img-big"><img src="./assets/images/about/about-1.jpg" alt="about-1"></div>
+            <div class="image img-small"><img src="./assets/images/about/about-2.jpg" alt="about-2"></div>
           </div>
           <div class="col-2">
-            <div class="image image-3 img-small"></div>
-            <div class="image image-4 img-big"></div>
+            <div class="image img-small"><img src="./assets/images/about/about-3.jpg" alt="about-3"></div>
+            <div class="image img-big"><img src="./assets/images/about/about-4.jpg" alt="about-4"></div>
           </div>
         </div>
       </section>
