fix: footer location link

--- a/coffe-house/src/menu.html
+++ b/coffe-house/src/menu.html
@@ -26,7 +26,7 @@
       <ul>
         <li class="nav-link active">
           <div>
-            <a class="link-font" href="/menu.html">Menu</a>
+            <a aria-disabled="true" role="link" class="link-font">Menu</a>
             <img src="./assets/icons/coffee-cup.svg" alt="coffee">
           </div>
         </li>
@@ -129,7 +129,7 @@
       <div class="footer__contacts">
         <nav>
           <ul>
-            <li class="nav-link nav-link__footer"><a href="https://www.google.com/maps/search/8558+Green+Rd.,+LA/@30.8296073,-96.6917553,6z/data=!3m1!4b1?entry=ttu" target="_blank"><img src="./assets/icons/pin-alt.svg" alt="geo">8558 Green Rd., LA</a></li>
+            <li class="nav-link nav-link__footer"><a href="https://www.google.com/maps/place/Pepper+Palace/@42.3599813,-71.0608719,16z/data=!4m10!1m2!2m1!1sboston+hot+sauce!3m6!1s0x89e3708613a0b8b5:0x4e4fca4d0306aec2!8m2!3d42.359799!4d-71.0550781!15sChBib3N0b24gaG90IHNhdWNlWhIiEGJvc3RvbiBob3Qgc2F1Y2WSAQtzcGljZV9zdG9yZZoBI0NoWkRTVWhOTUc5blMwVkpRMEZuU1VOU2EyRkljazluRUFF4AEA!16s%2Fg%2F11c43x0s6f?entry=ttu" target="_blank"><img src="./assets/icons/pin-alt.svg" alt="geo">8558 Green Rd., LA</a></li>
             <li class="nav-link nav-link__footer"><a href="tel:+16035550123"><img src="./assets/icons/phone.svg" alt="tel">+1&nbsp;(603)&nbsp;555&#8209;0123</a></li>
             <li class="nav-link nav-link__footer"><a href="#contacts"><img src="./assets/icons/clock.svg" alt="clock">Mon-Sat: 9:00 AM – 23:00 PM</a></li>
           </ul>
