fix: path to menu

--- a/coffe-house/src/index.html
+++ b/coffe-house/src/index.html
@@ -26,7 +26,7 @@
         <ul>
           <li class="nav-link">
             <div>
-              <a class="link-font" href="/menu.html">Menu</a>
+              <a class="link-font" href="menu.html">Menu</a>
               <img src="./assets/icons/coffee-cup.svg" alt="coffee">
             </div>
           </li>
