feat: add burger menu

--- a/coffe-house/src/index.html
+++ b/coffe-house/src/index.html
@@ -32,6 +32,7 @@
           </li>
         </ul>
       </nav>
+      <div class="header__burger-button"></div>
     </header>
     <main>
       <section class="hero">
