feat: add tablet styles for menu page

--- a/coffe-house/src/menu.html
+++ b/coffe-house/src/menu.html
@@ -32,6 +32,7 @@
         </li>
       </ul>
     </nav>
+    <div class="header__burger-button"></div>
   </header>
   <main>
     <section class="menu">
@@ -109,6 +110,7 @@
           </div>
         </li>
       </ul>
+      <button type="button" class="menu__refresh"><img src="./assets/icons/refresh.svg" alt="refresh"></button>
     </section>
   </main>
   <footer class="footer footer--menu" id="contacts">
