fead: add carousel slider

--- a/coffe-house/src/index.html
+++ b/coffe-house/src/index.html
@@ -45,21 +45,40 @@
       <section class="favorite-coffee" id="favorite-coffee">
         <h2 class="favorite-coffee__heading heading-2">Choose your <em class="heading-2 accent">favorite</em> coffee</h2>
         <div class="slider">
-          <div class="slider__back"><img src="./assets/icons/arrow-right.svg" alt="arrow-back"></div>
-          <div class="slider__item">
-            <img src="./assets/images/coffee-slider/coffee-slider-1.png" alt="coffe-1">
-            <div class="slider__desc">
-              <h3 class="heading-3">S’mores Frappuccino</h3>
-              <p class="medium">This new drink takes an espresso and mixes it with brown sugar and cinnamon before being topped with oat milk.</p>
-              <h4 class="heading-3">$5.50</h4>
+          <div class="slider__items">
+            <div class="slider__item slider__item--1">
+              <img src="./assets/images/coffee-slider/coffee-slider-1.png" alt="coffe-1">
+              <div class="slider__desc">
+                <h3 class="heading-3">S’mores Frappuccino</h3>
+                <p class="medium">This new drink takes an espresso and mixes it with brown sugar and cinnamon before being topped with oat milk.</p>
+                <h4 class="heading-3">$5.50</h4>
+              </div>
             </div>
-            <div class="slider__pagination">
-              <span class="active"></span>
-              <span></span>
-              <span></span>
+            <div class="slider__item slider__item--2">
+              <img src="./assets/images/coffee-slider/coffee-slider-2.png" alt="coffe-2">
+              <div class="slider__desc">
+                <h3 class="heading-3">Caramel Macchiato</h3>
+                <p class="medium">Fragrant and unique classic espresso with rich caramel-peanut syrup, with cream under whipped thick foam.</p>
+                <h4 class="heading-3">$5.00</h4>
+              </div>
+            </div>
+            <div class="slider__item slider__item--3">
+              <img src="./assets/images/coffee-slider/coffee-slider-3.png" alt="coffe-3">
+              <div class="slider__desc">
+                <h3 class="heading-3">Ice coffee</h3>
+                <p class="medium">A popular summer drink that tones and invigorates. Prepared from coffee, milk and ice.</p>
+                <h4 class="heading-3">$4.50</h4>
+              </div>
             </div>
           </div>
-          <div class="slider__next"><img src="./assets/icons/arrow-right.svg" alt="arrow-next"></div>
+
+          <div class="slider__pagination">
+            <span  class="slider__pagination-bar"><span class="slider__pagination-progress"></span></span>
+            <span  class="slider__pagination-bar"><span class="slider__pagination-progress"></span></span>
+            <span  class="slider__pagination-bar"><span class="slider__pagination-progress"></span></span>
+          </div>
+          <div class="slider__next"><img src="./assets/icons/arrow-right.svg" alt="arrow-back"></div>
+          <div class="slider__back"><img src="./assets/icons/arrow-right.svg" alt="arrow-next"></div>
         </div>
       </section>
       <section class="about" id="about">
