feat: add background video and fix slider styles

--- a/coffe-house/src/index.html
+++ b/coffe-house/src/index.html
@@ -36,6 +36,9 @@
     </header>
     <main>
       <section class="hero">
+        <video class="hero__video" autoplay muted loop>
+          <source src="./assets/videos/video-720p.mp4" type="video/mp4">
+        </video>
         <div class="hero__content">
           <h1 class="hero__heading heading-1"><em class="heading-1 accent">Enjoy</em> premium coffee at our charming cafe</h1>
           <p class="hero__text medium">With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite beverage.</p>
