feat: add menu category items

--- a/coffe-house/src/menu.html
+++ b/coffe-house/src/menu.html
@@ -38,12 +38,12 @@
     <section class="menu">
       <h1 class="menu__heading heading-2">Behind each of our cups hides an <em class="heading-2 accent">amazing surprise</em></h1>
       <ul class="menu__options">
-        <li class="menu__option active link-font"><span><img src="./assets/images/tab-items/coffee.png" alt="coffee"></span>Coffee</li>
-        <li class="menu__option link-font"><span><img src="./assets/images/tab-items/tea.png" alt="tea"></span>Tea</li>
-        <li class="menu__option link-font"><span><img src="./assets/images/tab-items/desert.png" alt="desert"></span>Dessert</li>
+        <li data-category="coffee" class="menu__option active link-font"><span><img src="./assets/images/tab-items/coffee.png" alt="coffee"></span>Coffee</li>
+        <li data-category="tea" class="menu__option link-font"><span><img src="./assets/images/tab-items/tea.png" alt="tea"></span>Tea</li>
+        <li data-category="dessert" class="menu__option link-font"><span><img src="./assets/images/tab-items/desert.png" alt="desert"></span>Dessert</li>
       </ul>
       <ul class="menu__items">
-        <li class="menu__item">
+        <!-- <li class="menu__item">
           <div class="menu__item-photo">
             <img src="./assets/images/menu/coffee-1.jpg" alt="coffee-1" >
           </div>
@@ -108,7 +108,7 @@
             <p class="medium">Fragrant black coffee with cognac and whipped cream</p>
             <h5 class="heading-3">$6.50</h5>
           </div>
-        </li>
+        </li> -->
       </ul>
       <button type="button" class="menu__refresh"><img src="./assets/icons/refresh.svg" alt="refresh"></button>
     </section>
