--- a/coffe-house/src/menu.html
+++ b/coffe-house/src/menu.html
@@ -43,72 +43,6 @@
         <li data-category="dessert" class="menu__option link-font"><span><img src="./assets/images/tab-items/desert.png" alt="desert"></span>Dessert</li>
       </ul>
       <ul class="menu__items">
-        <!-- <li class="menu__item">
-          <div class="menu__item-photo">
-            <img src="./assets/images/menu/coffee-1.jpg" alt="coffee-1" >
-          </div>
-          <div class="menu__item-description">
-            <h4 class="heading-3">Irish coffee</h4>
-            <p class="medium">Fragrant black coffee with Jameson Irish whiskey and whipped milk</p>
-            <h5 class="heading-3">$7.00</h5>
-          </div>
-        </li>
-        <li class="menu__item">
-          <div class="menu__item-photo coffee-2"><img src="./assets/images/menu/coffee-2.jpg" alt="coffee-2" ></div>
-          <div class="menu__item-description">
-            <h4 class="heading-3">Kahlua coffee</h4>
-            <p class="medium">Classic coffee with milk and Kahlua liqueur under a cap of frothed milk</p>
-            <h5 class="heading-3">$7.00</h5>
-          </div>
-        </li>
-        <li class="menu__item">
-          <div class="menu__item-photo coffee-3"><img src="./assets/images/menu/coffee-3.jpg" alt="coffee-3" ></div>
-          <div class="menu__item-description">
-            <h4 class="heading-3">Honey raf</h4>
-            <p class="medium">Espresso with frothed milk, cream and aromatic honey</p>
-            <h5 class="heading-3">$5.50</h5>
-          </div>
-        </li>
-        <li class="menu__item">
-          <div class="menu__item-photo coffee-4"><img src="./assets/images/menu/coffee-4.jpg" alt="coffee-5" ></div>
-          <div class="menu__item-description">
-            <h4 class="heading-3">Ice cappuccino</h4>
-            <p class="medium">Cappuccino with soft thick foam in summer version with ice</p>
-            <h5 class="heading-3">$5.00</h5>
-          </div>
-        </li>
-        <li class="menu__item">
-          <div class="menu__item-photo coffee-5"><img src="./assets/images/menu/coffee-5.jpg" alt="coffee-5" ></div>
-          <div class="menu__item-description">
-            <h4 class="heading-3">Espresso</h4>
-            <p class="medium">Classic black coffee</p>
-            <h5 class="heading-3">$4.50</h5>
-          </div>
-        </li>
-        <li class="menu__item">
-          <div class="menu__item-photo coffee-6"><img src="./assets/images/menu/coffee-6.jpg" alt="coffee-6" ></div>
-          <div class="menu__item-description">
-            <h4 class="heading-3">Latte</h4>
-            <p class="medium">Espresso coffee with the addition of steamed milk and dense milk foam</p>
-            <h5 class="heading-3">$5.50</h5>
-          </div>
-        </li>
-        <li class="menu__item">
-          <div class="menu__item-photo coffee-7"><img src="./assets/images/menu/coffee-7.jpg" alt="coffee-7" ></div>
-          <div class="menu__item-description">
-            <h4 class="heading-3">Latte macchiato</h4>
-            <p class="medium">Espresso with frothed milk and chocolate</p>
-            <h5 class="heading-3">$5.50</h5>
-          </div>
-        </li>
-        <li class="menu__item">
-          <div class="menu__item-photo coffee-8"><img src="./assets/images/menu/coffee-8.jpg" alt="coffee-8" ></div>
-          <div class="menu__item-description">
-            <h4 class="heading-3">Coffee with cognac</h4>
-            <p class="medium">Fragrant black coffee with cognac and whipped cream</p>
-            <h5 class="heading-3">$6.50</h5>
-          </div>
-        </li> -->
       </ul>
       <button type="button" class="menu__refresh"><img src="./assets/icons/refresh.svg" alt="refresh"></button>
     </section>
@@ -139,5 +73,40 @@
       </div>
     </div>
   </footer>
+  <div id="backdrop">
+    <div class="modal">
+      <div class="item__img" ><img src="./assets/images/menu/coffee-1.jpg" alt="coffee-1"></div>
+      <div class="item__content">
+        <div class="item__description">
+          <h4 class="heading-3">Irish coffee</h4>
+          <p class="medium">Fragrant black coffee with Jameson Irish whiskey and whipped milk</p>
+        </div>
+        <div class="item__sizes">
+          <h5 class="medium">Size</h5>
+          <ul class="item__tabs">
+            <li class="button-font active"><span>S</span>200 ml</li>
+            <li class="button-font"><span>M</span>300 ml</li>
+            <li class="button-font"><span>L</span>400 ml</li>
+          </ul>
+        </div>
+        <div class="item__additives">
+          <h5 class="medium">Additives</h5>
+          <ul class="item__tabs">
+            <li class="button-font"><span>1</span>Sugar</li>
+            <li class="button-font"><span>2</span>Cinnamon</li>
+            <li class="button-font"><span>3</span>Syrup</li>
+          </ul>
+        </div>
+        <div class="heading-3 item__total-price">
+          <span>Total:</span><span>$7.00</span>
+        </div>
+        <div class="item__alert">
+          <img class="item__alert-icon" src="./assets/icons/info-empty.svg" alt="info">
+          <p class="caption">The cost is not final. Download our mobile app to see the final price and place your order. Earn loyalty points and enjoy your favorite coffee with up to 20% discount.</p>
+        </div>
+        <button class="item__close-modal button-font" type="button">Close</button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
