fix: start video from javascript

--- a/coffe-house/src/index.html
+++ b/coffe-house/src/index.html
@@ -36,7 +36,7 @@
     </header>
     <main>
       <section class="hero">
-        <video class="hero__video" autoplay muted loop>
+        <video class="hero__video" muted loop>
           <source src="./assets/videos/video-720p.mp4" type="video/mp4">
         </video>
         <div class="hero__content">
