feat: add webp images to about section

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
         <div class="slider">
           <div class="slider__items">
             <div class="slider__item slider__item--1">
-              <img src="./assets/images/coffee-slider/coffee-slider-1.png" alt="coffe-1">
+              <img src="./assets/images/coffee-slider/coffee-slider-1.png" alt="coffee-1">
               <div class="slider__desc">
                 <h3 class="heading-3">S’mores Frappuccino</h3>
                 <p class="medium">This new drink takes an espresso and mixes it with brown sugar and cinnamon before being topped with oat milk.</p>
@@ -58,7 +58,7 @@
               </div>
             </div>
             <div class="slider__item slider__item--2">
-              <img src="./assets/images/coffee-slider/coffee-slider-2.png" alt="coffe-2">
+              <img src="./assets/images/coffee-slider/coffee-slider-2.png" alt="coffee-2">
               <div class="slider__desc">
                 <h3 class="heading-3">Caramel Macchiato</h3>
                 <p class="medium">Fragrant and unique classic espresso with rich caramel-peanut syrup, with cream under whipped thick foam.</p>
@@ -66,7 +66,7 @@
               </div>
             </div>
             <div class="slider__item slider__item--3">
-              <img src="./assets/images/coffee-slider/coffee-slider-3.png" alt="coffe-3">
+              <img src="./assets/images/coffee-slider/coffee-slider-3.png" alt="coffee-3">
               <div class="slider__desc">
                 <h3 class="heading-3">Ice coffee</h3>
                 <p class="medium">A popular summer drink that tones and invigorates. Prepared from coffee, milk and ice.</p>
@@ -88,12 +88,32 @@
         <h2 class="about__heading heading-2">Resource is <em class="heading-2 accent">the perfect and cozy place</em> where you can enjoy a variety of hot beverages, relax, catch up with friends, or get some work done.</h2>
         <div class="about__gallery">
           <div class="col-1">
-            <div class="image img-big"><img src="./assets/images/about/about-1.jpg" alt="about-1"></div>
-            <div class="image img-small"><img src="./assets/images/about/about-2.jpg" alt="about-2"></div>
+            <div class="image img-big">
+              <picture>
+                <source srcset="./assets/images/about/about-1.webp" type="image/webp">
+                <img src="./assets/images/about/about-1.jpg" alt="about-1">
+              </picture>
+            </div>
+            <div class="image img-small">
+              <picture>
+                <source srcset="./assets/images/about/about-2.webp" type="image/webp">
+                <img src="./assets/images/about/about-2.jpg" alt="about-2">
+              </picture>
+            </div>
           </div>
           <div class="col-2">
-            <div class="image img-small"><img src="./assets/images/about/about-3.jpg" alt="about-3"></div>
-            <div class="image img-big"><img src="./assets/images/about/about-4.jpg" alt="about-4"></div>
+            <div class="image img-small">
+              <picture>
+                <source srcset="./assets/images/about/about-3.webp" type="image/webp">
+                <img src="./assets/images/about/about-3.jpg" alt="about-3">
+              </picture>
+            </div>
+            <div class="image img-big">
+              <picture>
+                <source srcset="./assets/images/about/about-4.webp" type="image/webp">
+                <img src="./assets/images/about/about-4.jpg" alt="about-4">
+              </picture>
+            </div>
           </div>
         </div>
       </section>
