feat: add webp images to menu images

--- a/src/index.html
+++ b/src/index.html
@@ -91,12 +91,14 @@
             <div class="image img-big">
               <picture>
                 <source srcset="./assets/images/about/about-1.webp" type="image/webp">
+                <source srcset="./assets/images/about/about-1.jpg" type="image/jpg">
                 <img src="./assets/images/about/about-1.jpg" alt="about-1">
               </picture>
             </div>
             <div class="image img-small">
               <picture>
                 <source srcset="./assets/images/about/about-2.webp" type="image/webp">
+                <source srcset="./assets/images/about/about-2.jpg" type="image/jpg">
                 <img src="./assets/images/about/about-2.jpg" alt="about-2">
               </picture>
             </div>
@@ -105,12 +107,14 @@
             <div class="image img-small">
               <picture>
                 <source srcset="./assets/images/about/about-3.webp" type="image/webp">
+                <source srcset="./assets/images/about/about-3.jpg" type="image/jpg">
                 <img src="./assets/images/about/about-3.jpg" alt="about-3">
               </picture>
             </div>
             <div class="image img-big">
               <picture>
                 <source srcset="./assets/images/about/about-4.webp" type="image/webp">
+                <source srcset="./assets/images/about/about-4.jpg" type="image/jpg">
                 <img src="./assets/images/about/about-4.jpg" alt="about-4">
               </picture>
             </div>
