--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,11 @@
     <header class="header">
       <div class="header__logo">
         <a href="/">
-          <img src="./assets/images/logo.png" alt="logo">
+          <picture>
+            <source srcset="./assets/images/logo.avif" type="image/avif">
+            <source srcset="./assets/images/logo.png" type="image/png">
+            <img src="./assets/images/logo.png" alt="logo">
+          </picture>
         </a>
       </div>
       <nav class="header__nav header__nav--page">
@@ -50,7 +54,11 @@
         <div class="slider">
           <div class="slider__items">
             <div class="slider__item slider__item--1">
-              <img src="./assets/images/coffee-slider/coffee-slider-1.png" alt="coffee-1">
+              <picture>
+                <source srcset="./assets/images/coffee-slider/coffee-slider-1.avif" type="image/avif">
+                <source srcset="./assets/images/coffee-slider/coffee-slider-1.png" type="image/png">
+                <img src="./assets/images/coffee-slider/coffee-slider-1.png" alt="coffee-1">
+              </picture>
               <div class="slider__desc">
                 <h3 class="heading-3">S’mores Frappuccino</h3>
                 <p class="medium">This new drink takes an espresso and mixes it with brown sugar and cinnamon before being topped with oat milk.</p>
@@ -58,7 +66,11 @@
               </div>
             </div>
             <div class="slider__item slider__item--2">
-              <img src="./assets/images/coffee-slider/coffee-slider-2.png" alt="coffee-2">
+              <picture>
+                <source srcset="./assets/images/coffee-slider/coffee-slider-2.avif" type="image/avif">
+                <source srcset="./assets/images/coffee-slider/coffee-slider-2.png" type="image/png">
+                <img src="./assets/images/coffee-slider/coffee-slider-2.png" alt="coffee-2">
+              </picture>
               <div class="slider__desc">
                 <h3 class="heading-3">Caramel Macchiato</h3>
                 <p class="medium">Fragrant and unique classic espresso with rich caramel-peanut syrup, with cream under whipped thick foam.</p>
@@ -66,7 +78,11 @@
               </div>
             </div>
             <div class="slider__item slider__item--3">
-              <img src="./assets/images/coffee-slider/coffee-slider-3.png" alt="coffee-3">
+              <picture>
+                <source srcset="./assets/images/coffee-slider/coffee-slider-3.avif" type="image/avif">
+                <source srcset="./assets/images/coffee-slider/coffee-slider-3.png" type="image/png">
+                <img src="./assets/images/coffee-slider/coffee-slider-3.png" alt="coffee-3">
+              </picture>
               <div class="slider__desc">
                 <h3 class="heading-3">Ice coffee</h3>
                 <p class="medium">A popular summer drink that tones and invigorates. Prepared from coffee, milk and ice.</p>
@@ -143,7 +159,11 @@
           </div>
         </div>
         <div class="mobile-app__image">
-          <img src="./assets/images/mobile-screens.png" alt="phones">
+          <picture>
+            <source srcset="./assets/images/mobile-screens.avif" type="image/avif">
+            <source srcset="./assets/images/mobile-screens.png" type="image/png">
+            <img src="./assets/images/mobile-screens.png" alt="phones">
+          </picture>
         </div>
       </section>
     </main>
